# hanzzok

./: Cargo.toml  LICENSE  README.hz  README.md  Showcase.hz  deny.toml  document.hz  output.html  test.html
docs/: architecture.md
docs/architecture/: preprocessor.hz
hanzzok/: Cargo.toml  README.md
hanzzok/src/: main.rs
libhanzzok/: Cargo.toml  README.md
libhanzzok/src/: lib.rs
libhanzzok/src/api/: block_constructor_rule.rs  decorator_rule.rs  inline_constructor_rule.rs  mod.rs
libhanzzok/src/codegen/: context.rs  html.rs  mod.rs
libhanzzok/src/codegen/walker/: block_constructor.rs  decorator_chain.rs  inline_constructor.rs  inline_object.rs  mod.rs  node.rs  text.rs
libhanzzok/src/core/: compiler.rs  mod.rs  plugin.rs
libhanzzok/src/core/ast/: block_constructor.rs  decorator_chain.rs  inline_constructor.rs  inline_object.rs  mod.rs  raw.rs  text.rs  wasm_support.rs
libhanzzok/src/core/plugin/: mod.rs
libhanzzok/src/core/plugin/code/: code_block.rs  code_inline.rs  mod.rs
libhanzzok/src/core/plugin/emphasize/: emphasize.rs  mod.rs
libhanzzok/src/core/plugin/heading/: heading_meta.rs  hx.rs  mod.rs  toc.rs
libhanzzok/src/core/plugin/icon/: icon.rs  mod.rs
libhanzzok/src/core/plugin/input_guide/: key.rs  key_combo.rs  mod.rs  system_text.rs
libhanzzok/src/core/plugin/link/: define_link_ref.rs  link.rs  link_ref.rs  link_ref_meta.rs  mod.rs
libhanzzok/src/core/plugin/list/: mod.rs  unordered_list.rs
libhanzzok/src/core/plugin/math/: math_block.rs  math_inline.rs  mod.rs
libhanzzok/src/core/plugin/quotation/: blockquote.rs  mod.rs
libhanzzok/src/core/plugin/youtube/: mod.rs  youtube_embed.rs
libhanzzok/src/core/position/: line_column.rs  mod.rs  span.rs  spanned.rs
libhanzzok/src/syntax/: mod.rs  tokenize.rs
libhanzzok/src/syntax/parse/: mod.rs  parse_block_constructor.rs  parse_decorator_chain.rs  parse_hzdata.rs  parse_inline_constructor.rs  parse_inline_object.rs  parse_newline.rs  parse_text.rs
libhanzzok/src/syntax/parse/nom_ext/: mod.rs  parser.rs  util.rs
libsezongc/: Cargo.toml
libsezongc/src/: lib.rs
libsezongc/src/api/: ast.rs  compiler.rs  diagnostic.rs  mod.rs  platform.rs  preprocessor.rs  renderable.rs  source_file.rs  token.rs
libsezongc/src/api/position/: line_column.rs  mod.rs  span.rs  spanned.rs
libsezongc/src/core/: code_character.rs  mod.rs
libsezongc/src/parse/: mod.rs  parser.rs
libsezongc/src/parse/functions/: base.rs  block_constructor.rs  decorator.rs  escape.rs  inline_constructor.rs  inline_object.rs  mod.rs  sezong.rs  text.rs
libsezongc/src/parse/functions/util/: any.rs  exact.rs  into.rs  mod.rs  not.rs  skip_whitespace.rs  take.rs  take_while.rs  unexpected.rs  unmatched.rs
libsezongc/src/tokenize/: mod.rs  rule_kind.rs  tokenizer.rs  tokenizer_command.rs
libsezongc/src/tokenize/rules/: initial.rs  mod.rs  newline_cr.rs  punctuation.rs  text.rs  whitespace.rs
serde_hzdata/: Cargo.toml  README.md
serde_hzdata/src/: error.rs  lib.rs  unit.rs  value.rs
serde_hzdata/src/de/: deserialize.rs  map_access.rs  mod.rs  seq_access.rs  value.rs  value_map_access.rs  value_seq_access.rs
serde_hzdata/src/de/parse/: mod.rs  parse_bool.rs  parse_identifier.rs  parse_number.rs  parse_string.rs  util.rs
serde_hzdata/src/ser/: mod.rs  serialize.rs  serialize_map.rs  serialize_seq.rs  value.rs  value_map.rs  value_seq.rs
serde_hzdata/tests/: de_test.rs
sezongc/: Cargo.toml  test.sz
sezongc/src/: main.rs
