[package]
name = "hanzzok"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
description = "A small predictable markup language"
homepage = "https://hanzzok.github.io/"
repository = "https://github.com/hanzzok/hanzzok"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
eyre = "0.6.5"
libhanzzok = { version = "0.1.5", "path" = "../libhanzzok" }
