[package]
name = "libhanzzok"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
nom = "7.0.0"
serde = "1.0.130"
thiserror = "1.0.29"
toml = "0.5.8"

[dev-dependencies]
pretty_assertions = "1.0.0"
