[package]
name = "libhanzzok"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
description = "Hanzzok compiler library"
homepage = "https://hanzzok.github.io/"
repository = "https://github.com/hanzzok/hanzzok"
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
nom = "7.0.0"
once_cell = "1.8.0"
serde = "1.0.130"
serde_hzdata = "0.1.0"
thiserror = "1.0.30"
toml = "0.5.8"
v_htmlescape = "0.14.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
