[package]
name = "libhanzzok"
version = "0.1.4"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
description = "Hanzzok compiler library"
homepage = "https://hanzzok.github.io/"
repository = "https://github.com/hanzzok/hanzzok"
categories = ["text-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
nom = "7.0.0"
once_cell = "1.8.0"
serde = "1.0.130"
serde_hzdata = { version = "0.1.1", path = "../serde_hzdata" }
thiserror = "1.0.30"
toml = "0.5.8"
v_htmlescape = "0.14.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
