[package]
name = "libsezongc"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
lazy_static = "1.4.0"
paste = "0.1.12"
nom = "5.1.1"
