[package]
name = "serde_hzdata"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.0.0"
