[package]
name = "serde_hzdata"
version = "0.1.1"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
description = "A data markup language for Hanzzok"
homepage = "https://hanzzok.github.io/"
repository = "https://github.com/hanzzok/hanzzok"
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.0.0"
